--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Ragavendra Nagraj # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Software Developer<br>Programmer<br>Performance<br>Automation<br>Security<br><br>
+  Software Developer<br>Programmer<br>Performance Engineer<br>Software Developer in Test<br>Security Testing<br><br>
   <a href="https://www.linkedin.com/in/ragavendrabn/">View My LinkedIn Profile</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
