--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,18 @@ title: Ragavendra Nagraj # your name (or website title) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Software Developer<br>Programmer<br>Performance Engineer<br>Software Developer in Test<br>Security Testing<br><br>
   <a href="https://www.linkedin.com/in/ragavendrabn/">View My LinkedIn Profile</a> 
-  
+  <br><br>
+  <a href="https://github.com/ragavendra">View My Github Profile</a> 
+  <br><br>
+  Github Projects
+  <a href="https://github.com/ragavendra/PerfService">Perf Service</a>
+  <a href="https://github.com/ragavendra/RealWorldClasses">Real World Classes</a>
+  <a href="https://github.com/ragavendra/APITests">APITests</a>
+  <a href="https://github.com/ragavendra/Selenium">Selenium</a>
+  <br><br>
+  Company
+  <a href="https://sites.google.com/view/garden-systems">Grden Systems</a>
+  <br><br>
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
