--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="https://github.com/ragavendra">View My Github Profile</a> 
   <br><br>
-  Github Projects
-  <a href="https://github.com/ragavendra/PerfService">Perf Service</a>
-  <a href="https://github.com/ragavendra/RealWorldClasses">Real World Classes</a>
-  <a href="https://github.com/ragavendra/APITests">APITests</a>
+  Github Projects<br>
+  <a href="https://github.com/ragavendra/PerfService">Perf Service</a><br>
+  <a href="https://github.com/ragavendra/RealWorldClasses">Real World Classes</a><br>
+  <a href="https://github.com/ragavendra/APITests">APITests</a><br>
   <a href="https://github.com/ragavendra/Selenium">Selenium</a>
   <br><br>
   Company
-  <a href="https://sites.google.com/view/garden-systems">Grden Systems</a>
+  <a href="https://sites.google.com/view/garden-systems">Garden Systems</a>
   <br><br>
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
