--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,16 @@
 title: Ragavendra Nagraj # your name (or website title) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Software Developer<br>Programmer<br>Performance Engineer<br>Software Developer in Test<br>Security Testing<br><br>
-  <a href="https://www.linkedin.com/in/ragavendrabn/">View My LinkedIn Profile</a> 
+  Software Developer<br>Programmer<br>Performance Engineer<br>Security Testing<br><br>
+  <a href="https://www.linkedin.com/in/ragavendrabn/">LinkedIn</a> 
   <br><br>
-  <a href="https://github.com/ragavendra">View My Github Profile</a> 
+  <a href="https://github.com/ragavendra">Github</a> 
   <br><br>
   Github Projects<br>
   <a href="https://github.com/ragavendra/PerfService">Perf Service</a><br>
   <a href="https://github.com/ragavendra/RealWorldClasses">Real World Classes</a><br>
-  <a href="https://github.com/ragavendra/APITests">APITests</a><br>
-  <a href="https://github.com/ragavendra/Selenium">Selenium</a>
   <br><br>
   Company
-  <a href="https://sites.google.com/view/garden-systems">Garden Systems</a>
+  <a href="https://garden-systems.vercel.app/">Garden Systems</a>
   <br><br>
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
