--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,25 @@
 title: Ragavendra Nagraj # your name (or website title) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Software Developer<br>Programmer<br>Performance Engineer<br>Security Testing<br><br>
-  <a href="https://www.linkedin.com/in/ragavendrabn/">LinkedIn</a> 
-  <br><br>
-  <a href="https://github.com/ragavendra">Github</a> 
-  <br><br>
+
   Github Projects<br>
   <a href="https://github.com/ragavendra/PerfService">Perf Service</a><br>
+  <a href="https://github.com/ragavendra/DataConvergenceTool">Data Convergence Tool</a><br>
   <a href="https://github.com/ragavendra/RealWorldClasses">Real World Classes</a><br>
+
+  <br><br>
+  Blog
+  <a href="https://ragavendra.vercel.app/">Ragavendra ..</a>
+  <br><br>
+  
   <br><br>
   Company
   <a href="https://garden-systems.vercel.app/">Garden Systems</a>
+  <br><br>
+  
+  <a href="https://www.linkedin.com/in/ragavendrabn/">LinkedIn</a> 
+  <br><br>
+  <a href="https://github.com/ragavendra">Github</a> 
   <br><br>
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
