--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ragavendra Nagraj # your name (or website title) here
 logo: "/images/logo.png?raw=true"
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Software Developer<br>Programmer<br>Web Developer<br>Performance Engineer<br>Security Testing<br>
+  Software Developer<br>Programmer<br>Web Developer
   <br>
 
   Projects<br>
@@ -25,6 +25,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   Social<br>
   <a href="https://www.linkedin.com/in/ragavendrabn/" target="_blank">LinkedIn</a><br>
   <a href="https://github.com/ragavendra" target="_blank">Github</a><br>
+  
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
