--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ragavendra Nagraj # your name (or website title) here
 logo: "/images/logo.png?raw=true"
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Software Developer<br>Programmer<br>Web Developer
+  Software Developer<br>Web Developer<br>
   <br>
 
   Projects<br>
